--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Room Thermostat Temperature Control v2.25 (ramses_cc)
+  name: Room Thermostat Temperature Control v2.25.1
   description: >
     Adjust the thermostat setpoint based on external temperature, room schedules,
     specific conditions, and room occupancy status with configurable occupancy detection and time-based offsets.
@@ -136,6 +136,7 @@ variables:
   thermostat_name: "{{ state_attr(thermostat, 'friendly_name') or thermostat }}"
   thermostat_currentsetpoint: "{{ state_attr(thermostat, 'temperature') | float(default=0) }}"
   is_weekend: "{{ now().weekday() in [5, 6] }}"
+
   # time bands: 06:30–12:00, 12:00–16:30, 16:30–22:00
   time_period: >
     {% set m = now().hour*60 + now().minute %}
@@ -143,6 +144,7 @@ variables:
     {% elif 720 <= m < 990 %}afternoon
     {% elif 990 <= m < 1320 %}evening
     {% else %}none{% endif %}
+
   unoccupied_offset: >
     {% if time_period == 'morning' %}
       {{ (is_weekend and weekend_morning_offset or weekday_morning_offset) | float(0) }}
@@ -151,6 +153,8 @@ variables:
     {% elif time_period == 'evening' %}
       {{ (is_weekend and weekend_evening_offset or weekday_evening_offset) | float(0) }}
     {% else %}0{% endif %}
+
+  # string-safe boolean coercion to avoid "false" being truthy
   is_unoccupied: >
     {% set s = occupancy_sensor %}
     {% if s and is_state(s, 'off') and states[s] is not none %}
@@ -158,6 +162,8 @@ variables:
     {% else %}
       false
     {% endif %}
+  is_unoccupied_bool: "{{ is_unoccupied | bool }}"
+
   # derive hours/minutes for service payload
   _dur_h: "{{ (override_duration_minutes | int(10)) // 60 }}"
   _dur_m: "{{ (override_duration_minutes | int(10)) % 60 }}"
@@ -181,12 +187,12 @@ action:
             value_template: "{{ current_temperature > 15 }}"
         sequence:
           - variables:
-              new_temp: "{{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0) }}"
+              new_temp: "{{ (scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied_bool else 0)) | round(1) }}"
           - service: ramses_cc.set_zone_mode
             target: { entity_id: !input thermostat }
             data:
               mode: temporary_override
-              setpoint: "{{ new_temp | round(1) }}"
+              setpoint: "{{ new_temp }}"
               duration:
                 hours: "{{ _dur_h | int }}"
                 minutes: "{{ _dur_m | int }}"
@@ -195,22 +201,22 @@ action:
             data:
               level: warning
               message: >
-                [Thermo {{ thermostat_name }}] RAMSES TEMP OVERRIDE -> {{ new_temp | round(1) }}°C
+                [Thermo {{ thermostat_name }}] RAMSES TEMP OVERRIDE -> {{ new_temp }}°C
                 for {{ override_duration_minutes }}m (was {{ thermostat_currentsetpoint }}°C;
                 ext {{ current_temperature }}°C; sched {{ scheduled_setpoint }}°C;
-                unocc {{ is_unoccupied }}; offset {{ unoccupied_offset }}°C)
+                unocc {{ is_unoccupied_bool }}; offset {{ unoccupied_offset }}°C)
 
       - conditions:
           - condition: template
             value_template: "{{ 10 < current_temperature <= 15 }}"
         sequence:
           - variables:
-              new_temp: "{{ scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied else 0) }}"
+              new_temp: "{{ (scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied_bool else 0)) | round(1) }}"
           - service: ramses_cc.set_zone_mode
             target: { entity_id: !input thermostat }
             data:
               mode: temporary_override
-              setpoint: "{{ new_temp | round(1) }}"
+              setpoint: "{{ new_temp }}"
               duration:
                 hours: "{{ _dur_h | int }}"
                 minutes: "{{ _dur_m | int }}"
@@ -219,22 +225,22 @@ action:
             data:
               level: warning
               message: >
-                [Thermo {{ thermostat_name }}] RAMSES TEMP OVERRIDE -> {{ new_temp | round(1) }}°C
+                [Thermo {{ thermostat_name }}] RAMSES TEMP OVERRIDE -> {{ new_temp }}°C
                 for {{ override_duration_minutes }}m (was {{ thermostat_currentsetpoint }}°C;
                 ext {{ current_temperature }}°C; sched {{ scheduled_setpoint }}°C;
-                unocc {{ is_unoccupied }}; offset {{ unoccupied_offset }}°C)
+                unocc {{ is_unoccupied_bool }}; offset {{ unoccupied_offset }}°C)
 
       - conditions:
           - condition: template
             value_template: "{{ 5 < current_temperature <= 10 }}"
         sequence:
           - variables:
-              new_temp: "{{ scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied else 0) }}"
+              new_temp: "{{ (scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied_bool else 0)) | round(1) }}"
           - service: ramses_cc.set_zone_mode
             target: { entity_id: !input thermostat }
             data:
               mode: temporary_override
-              setpoint: "{{ new_temp | round(1) }}"
+              setpoint: "{{ new_temp }}"
               duration:
                 hours: "{{ _dur_h | int }}"
                 minutes: "{{ _dur_m | int }}"
@@ -243,22 +249,22 @@ action:
             data:
               level: warning
               message: >
-                [Thermo {{ thermostat_name }}] RAMSES TEMP OVERRIDE -> {{ new_temp | round(1) }}°C
+                [Thermo {{ thermostat_name }}] RAMSES TEMP OVERRIDE -> {{ new_temp }}°C
                 for {{ override_duration_minutes }}m (was {{ thermostat_currentsetpoint }}°C;
                 ext {{ current_temperature }}°C; sched {{ scheduled_setpoint }}°C;
-                unocc {{ is_unoccupied }}; offset {{ unoccupied_offset }}°C)
+                unocc {{ is_unoccupied_bool }}; offset {{ unoccupied_offset }}°C)
 
       - conditions:
           - condition: template
             value_template: "{{ 0 < current_temperature <= 5 }}"
         sequence:
           - variables:
-              new_temp: "{{ scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied else 0) }}"
+              new_temp: "{{ (scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied_bool else 0)) | round(1) }}"
           - service: ramses_cc.set_zone_mode
             target: { entity_id: !input thermostat }
             data:
               mode: temporary_override
-              setpoint: "{{ new_temp | round(1) }}"
+              setpoint: "{{ new_temp }}"
               duration:
                 hours: "{{ _dur_h | int }}"
                 minutes: "{{ _dur_m | int }}"
@@ -267,22 +273,22 @@ action:
             data:
               level: warning
               message: >
-                [Thermo {{ thermostat_name }}] RAMSES TEMP OVERRIDE -> {{ new_temp | round(1) }}°C
+                [Thermo {{ thermostat_name }}] RAMSES TEMP OVERRIDE -> {{ new_temp }}°C
                 for {{ override_duration_minutes }}m (was {{ thermostat_currentsetpoint }}°C;
                 ext {{ current_temperature }}°C; sched {{ scheduled_setpoint }}°C;
-                unocc {{ is_unoccupied }}; offset {{ unoccupied_offset }}°C)
+                unocc {{ is_unoccupied_bool }}; offset {{ unoccupied_offset }}°C)
 
       - conditions:
           - condition: template
             value_template: "{{ current_temperature <= 0 }}"
         sequence:
           - variables:
-              new_temp: "{{ scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied else 0) }}"
+              new_temp: "{{ (scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied_bool else 0)) | round(1) }}"
           - service: ramses_cc.set_zone_mode
             target: { entity_id: !input thermostat }
             data:
               mode: temporary_override
-              setpoint: "{{ new_temp | round(1) }}"
+              setpoint: "{{ new_temp }}"
               duration:
                 hours: "{{ _dur_h | int }}"
                 minutes: "{{ _dur_m | int }}"
@@ -291,7 +297,7 @@ action:
             data:
               level: warning
               message: >
-                [Thermo {{ thermostat_name }}] RAMSES TEMP OVERRIDE -> {{ new_temp | round(1) }}°C
+                [Thermo {{ thermostat_name }}] RAMSES TEMP OVERRIDE -> {{ new_temp }}°C
                 for {{ override_duration_minutes }}m (was {{ thermostat_currentsetpoint }}°C;
                 ext {{ current_temperature }}°C; sched {{ scheduled_setpoint }}°C;
-                unocc {{ is_unoccupied }}; offset {{ unoccupied_offset }}°C)
+                unocc {{ is_unoccupied_bool }}; offset {{ unoccupied_offset }}°C)
